auto-test/tests/chapter_8/valid/extra_credit/switch_not_taken.c
int main(void) {
    int a = 1;
    
    
    switch(a) {
        case 0: return 0;
        case 2: return 0;
        case 3: return 0;
    }
    return 1;
}