auto-test/tests/chapter_8/invalid_semantics/extra_credit/undefined_label_in_case.c

int main(void) {
    int a = 3;
    switch (a) {
        case 1: goto foo;
        default: return 0;
    }
    return 0;
}